--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
-.vscode-server
-.local
-.ipython
-.cache
-.wget-hsts
-.bash_history
-.profile
-.redhat
-.gitconfig
-/code/pths/
+.*
+!/.gitignore
 *.pth
+__pycache__
+*.zip
